# symbolic

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  makefile  symbolic.cabal
app/: Main.hs
paper/: paper.tex
src/: Symbolic.hs
src/Numeric/: Extensive.hs  Quaternion.hs  Symbolic.hs
src/Numeric/Extensive/: Core.hs  Inverse.hs  Print.hs
