cabal-version:      3.0
name:               symbolic
version:            0.1.0.0
synopsis:           Some symbolic algebra experiments
license:            BSD-3-Clause
license-file:       LICENSE
author:             Finlay Thompson
maintainer:         finlay@dragonfly.co.nz
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:     Numeric.Extensive
                       , Numeric.Quaternion
                       , Numeric.Symbolic
                       , Numeric.Extensive.Core
                       , Numeric.Extensive.Inverse
                       , Numeric.Extensive.Print
    build-depends:       base,
                         algebra,
                         QuickCheck,
                         mtl,
                         pretty,
                         boxes
    hs-source-dirs:      src

    ghc-options: -Wall -fno-warn-name-shadowing -O3
    default-language:    Haskell2010

executable symbolic
    import:           warnings

    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        symbolic,
        text

    hs-source-dirs:   app
    default-language: GHC2021

